--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format": "npx prettier --write .",
+    "format": "prettier --write .",
     "lint-staged": "lint-staged --config lint-staged.js",
     "husky-install": "husky install"
   },
